--- a/src/templates/movimentacoes.html
+++ b/src/templates/movimentacoes.html
@@ -114,10 +114,10 @@
     <table class="movimentacoes-table">
       <thead>
         <tr>
-          <th>Material</th>
+          <th style="width: 200px;">Material</th>
           <th>Qtd Retirada</th>
           <th>Colaborador</th>
-          <th>Local Utilização</th>
+          <th style="width: 200px;">Local Utilização</th>
           <th>OS</th>
           <th>Data Retirada</th>
           <th>Prazo Devolução</th>
